src/objects/Team_Members__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Type__c</fullName>
        <label>Approver Type</label>
        <picklist>
            <picklistValues>
                <fullName>First Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>User__r.IsActive</formula>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Assignment__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Members</label>
    <nameField>
        <displayFormat>TM_{0000}</displayFormat>
        <label>Team Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>